# grupomon.github.io

./: index  index.html
Apresentação/: Apresentação.html
Contexto/: Contexto.html
Desenvolvimento/: Desenvolvimento.html
Laboratorio/: Laboratorio.html
Modelagem/: Modelagem.html
RelatorioFinal/: CMakeCache.txt  CMakeLists.txt  Makefile  Motion_detect.cpp  Relatorio Final  RelatorioFinal.html  cmake_install.cmake  iSafetymon  iSafetymon.cpp
RelatorioFinal/Demo_iSafetymon/: iSafetymon.cpp
RelatorioFinal/Log/: Log__05_12_2024_20_26_07.txt  Log__05_12_2024_20_32_13.txt  Log__05_12_2024_20_37_16.txt  Log__05_12_2024_20_44_25.txt  Log__05_12_2024_20_49_54.txt  Log__05_12_2024_20_56_58.txt
Relatorio_Lab01/: Relatorio01.html
Relatorio_Lab02/: Relatorio_Lab02.html
Relatorio_Lab02/1/FIltros 7x7/: Smoothing.cpp
Relatorio_Lab02/1/Filtros 11x11/: Smoothing.cpp
Relatorio_Lab02/1/Filtros 3x3/: Smoothing.cpp
Relatorio_Lab02/1/Filtros 5x5/: Smoothing.cpp
Relatorio_Lab02/3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  webcam  webcam.cpp
Relatorio_Lab02/4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  desafio  desafio.cpp
Relatorio_Lab03/: Relatorio_Lab03.html
Relatorio_Lab03/Canny/: CMakeCache.txt  CMakeLists.txt  Canny_Gaussian_Threshold_inRange  Canny_Gaussian_Threshold_inRange.cpp  Makefile  cmake_install.cmake
Relatorio_Lab03/Canny record/: CMakeCache.txt  CMakeLists.txt  Makefile  R_Canny_Gaussian_Threshold_inRange  R_Canny_Gaussian_Threshold_inRange.cpp  cmake_install.cmake
Relatorio_Lab03/Filtro gaussiano aplicado/: CMakeCache.txt  CMakeLists.txt  Gaussian_Threshold_inRange  Gaussian_Threshold_inRange.cpp  Makefile  cmake_install.cmake
Relatorio_Lab04/: Relatorio_Lab04.html
Relatorio_Lab04/Ex_02/: CMakeCache.txt  CMakeLists.txt  Equalize_Calc_Hist  Equalize_Calc_Hist.cpp  Makefile  cmake_install.cmake
Relatorio_Lab04/Ex_1/: CMakeCache.txt  CMakeLists.txt  EqualizeHist_Demo.cpp  Makefile  cmake_install.cmake
Relatorio_Lab04/Ex_3/: Binariza_Equalize_Calc_Hist  Binariza_Equalize_Calc_Hist.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Relatorio_Lab04/Ex_4/: CMakeCache.txt  CMakeLists.txt  Makefile  RGB_Binariza_Equalize_Calc_Hist  RGB_Binariza_Equalize_Calc_Hist.cpp  cmake_install.cmake
Relatorio_Lab04/Histograma/: calcHist_Demo  calcHist_Demo.cpp
Relatorio_Lab05/: Relatorio_Lab05.html
Relatorio_Lab05/Video Gravado/: CMakeLists.txt  cmake_install.cmake
Relatorio_Lab05/Video Webcam/: CMakeCache.txt  CMakeLists.txt  Makefile  bg_sub_webcam  bg_sub_webcam.cpp  cmake_install.cmake
Relatorio_Lab07/: Relatorio_Lab07.html
Relatorio_Lab07/ex.1/: objectDetection.cpp
Relatorio_Lab07/ex.2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  objectDetection  objectDetection.cpp
Seminario/: Seminario.html
Teste/: Teste.html
Video Gravado/: CMakeCache.txt  Makefile  bg_sub  bg_sub.cpp
iSafetymon/: iSafetymon.cpp  log_intrucoes.txt
(+25 files in other folders)
